--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -5,6 +5,7 @@ nav {
     justify-content: space-between;
     padding: 0 50px;
     color: #5C1E21;
+    box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.5);
 }
 
 .navLogo {
