--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -4,3 +4,11 @@
     background-color:#5C1E21;
     text-align: center;
 }
+.footer a {
+    text-decoration: none;
+    color: white;
+}
+
+.footer a:hover {
+    font-weight: bold;
+}
