--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -12,3 +12,9 @@
 .footer a:hover {
     font-weight: bold;
 }
+
+@media screen and (max-width: 399px) {
+    .footer p {
+        font-size: 10px;
+    }
+}
