feat: Add responsive at project page and add new project

--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -36,6 +36,7 @@ nav {
 .navbarMenu a:hover {
     text-decoration: underline;
     background-color: white;
+    border-radius: 10px;
 }
 
 .hidden {
